# backend

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .prettierrc.js  .versionrc.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.production  Dockerfile.staging  LICENSE.md  Procfile  README.md  SETUP.md  app.json  diesel.toml  fly.production.toml  fly.staging.toml  fly.toml  now.json  openapi.json  package.json  production.Dockerfile  serverless.yml  sqlx-data.json  staging.Dockerfile  tsconfig.json
.github/: dependabot.yml
.github/workflows/: master.yml  pr.yml  production.yml
api/: user.ts
api/verify/: demo.ts
migrations/: 20220117025847_email_data.down.sql  20220117025847_email_data.up.sql  README.md
migrations/2020-08-02-220301_init/: down.sql  up.sql
migrations/sqlxmq/: README.md
models/: user.ts  verification.ts
nodejs/: package.json  serverless.yml  tsconfig.json
nodejs/src/api/exists/: Cargo.toml  README.md
nodejs/src/api/exists/src/: main.rs
nodejs/src/api/verify/: bulk.ts
nodejs/src/models/: verification.ts
nodejs/src/util/: chain.ts  cors.ts  jwt.ts  rateLimit.ts
rust/: Cargo.toml  package.json  serverless.yml
rust/src/: main.rs
scripts/: .versionrc.json  docker_entrypoint.sh  e2e.sh  standard-version-updater.js  update-dockerfile.js
src/: auth.rs  check.rs  db.rs  error.rs  errors.rs  handlers.rs  http.rs  lib.rs  main.rs  saasify_secret.rs  sentry_util.rs  warp.rs
src/heroku/: check.rs  mod.rs  warp.rs
src/models/: api_token.rs  api_usage_record.rs  mod.rs  schema.rs  user.rs
src/routes/: check_email.rs  mod.rs  version.rs
src/routes/bulk/: download.rs  error.rs  get.rs  mod.rs  post.rs  results.rs  task.rs
src/routes/check_email/: header.rs  known_errors.rs  mod.rs  post.rs  util.rs
src/routes/manage_job/: get.rs  post.rs
src/routes/version/: get.rs  mod.rs
src/serverless/: check.rs  known_errors.rs  lambda.rs  mod.rs
test/: payload.json
tests/: READMD.md  README.md  check_email.rs  common.rs
tor/: Dockerfile  fly.toml
util/: chain.ts  db.ts  index.ts  jwt.ts
