[package]
name = "reacher_backend"
version = "0.3.12"
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
async-smtp = "0.4"
check-if-email-exists = "0.8.28"
env_logger = "0.9"
log = "0.4"
sentry = "0.23"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16", features = ["macros"] }
warp = "0.3"
openssl = { version = "0.10.38", features = ["vendored"] }
sqlxmq = "0.3.4"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres", "uuid", "chrono", "json", "offline" ] }
dotenv = "0.15.0"
serde_json = "1.0"

[dev-dependencies]
