[package]
name = "reacher_backend"
version = "0.4.0"
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
async-smtp = "0.5"
check-if-email-exists = "0.8"
dotenv = "0.15.0"
env_logger = "0.9"
log = "0.4"
sentry = "0.23"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20", features = ["macros"] }
uuid = "1.1"
warp = "0.3"
openssl = { version = "0.10.41", features = ["vendored"] }
csv = { version = "1.1.6", optional = true }
serde_json = { version = "1.0", optional = true }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "offline", "migrate" ], optional = true }
sqlxmq = { version = "0.4", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
bulk = ["csv", "serde_json", "sqlx", "sqlxmq"]
